RESOLVED FIXED307949
Rotating bounding box invalidation does not redraw a border on other element
https://bugs.webkit.org/show_bug.cgi?id=307949
Summary Rotating bounding box invalidation does not redraw a border on other element
Jonathan Deutsch
Reported 2026-02-15 12:41:05 PST
Created attachment 478358 [details] Reproduction HTML Document A div that has rotates can cause a region to be invalidated for repainting. However, if there's another element underneath that has a border, this border may not be repainted. Please see the simple repro case html document and video (Safari vs Chrome). The issue can be reproduced on: macOS 15.7.4 (24G517) and Safari Version 26.3 (20623.2.7.18.1) macOS 15.7.4 (24G517) and Safari Technology Preview Release 237 (WebKit 20625.1.3.19.2) macOS 26.1 Beta (25B5042k) and Safari Version 26.1 (21622.2.5) The issue does not reproduce on: macOS 14.4 (23E214) and Safari Version 17.4 (19618.1.15.11.12) Chrome Firefox WKWebView inside of a native mac app on macOS 15.7.4 This bug affects users of the Tumult Hype application for macOS: https://tumult.com/hype/
Attachments
Reproduction HTML Document (1.48 KB, text/html)
2026-02-15 12:41 PST, Jonathan Deutsch
no flags
Screenshot of the bug in Safari (34.18 KB, image/png)
2026-02-15 12:42 PST, Jonathan Deutsch
no flags
Video showing Chrome (left) vs Safari with bug (right) (1.73 MB, video/quicktime)
2026-02-15 12:43 PST, Jonathan Deutsch
no flags
Jonathan Deutsch
Comment 1 2026-02-15 12:42:47 PST
Created attachment 478359 [details] Screenshot of the bug in Safari
Jonathan Deutsch
Comment 2 2026-02-15 12:43:21 PST
Created attachment 478360 [details] Video showing Chrome (left) vs Safari with bug (right)
Jonathan Deutsch
Comment 3 2026-02-15 12:50:08 PST
Note that adding `will-change: transform;` to the #small-box CSS will workaround the issue.
Radar WebKit Bug Importer
Comment 4 2026-02-15 14:09:20 PST
Ahmad Saleem
Comment 5 2026-02-15 14:09:51 PST
I am able to reproduce on WebKit ToT (Minibrowser - 307621@main).
Ahmad Saleem
Comment 6 2026-02-15 14:12:21 PST
*** Chrome Canary 147 (147.0.7688.0 (Official Build) canary (arm64) ) *** Does not reproduce. *** Fireofx Nightly 149 (20260215090851) *** Does not reproduce.
Simon Fraser (smfr)
Comment 7 2026-02-16 10:06:55 PST
This is a repaint bug.
Nipun Shukla
Comment 8 2026-02-19 17:45:15 PST
EWS
Comment 9 2026-02-20 11:20:13 PST
Committed 307930@main (54b6555c4fa6): <https://commits.webkit.org/307930@main> Reviewed commits have been landed. Closing PR #59049 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.