Rotating bounding box invalidation does not redraw a border on other element rdar://170438404 https://bugs.webkit.org/show_bug.cgi?id=307949

Reviewed by Simon Fraser.

The regression from 290951@main replaced allCornersClippedOut() with
outerShapeContains(), but these have different semantics. outerShapeContains
checks if the dirty rect is inside the rounded shape, while
allCornersClippedOut() checked if the dirty rect avoids all corner regions.
A rect inside the shape but within a corner region still needs curved-path
painting. Re-add allCornersClippedOut() to restore the correct
operation for this case.

Test: fast/repaint/border-radius-partial-repaint-corner.html

* LayoutTests/fast/repaint/border-radius-partial-repaint-corner-expected.html: Added.
* LayoutTests/fast/repaint/border-radius-partial-repaint-corner.html: Added.
* Source/WebCore/rendering/BorderPainter.cpp:
(WebCore::BorderPainter::paintBorder const):
* Source/WebCore/rendering/BorderShape.cpp:
(WebCore::BorderShape::allCornersClippedOut const):
* Source/WebCore/rendering/BorderShape.h:

Canonical link: https://commits.webkit.org/307930@main